fix issue 140